objects/Page__c.object
<CustomObject>
    <fields>
        <fullName>Cache_expires__c</fullName>
        <defaultValue>600</defaultValue>
        <description>This field will keep the number of seconds this page stays in the cache on the Content Delivery Network.</description>
        <inlineHelpText>This field will keep the number of seconds this page stays in the cache on the Content Delivery Network.</inlineHelpText>
        <label>Cache expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>CMSFolder__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FriendlyUrl__c</fullName>
        <inlineHelpText>Type a friendly url here. Do not start with a &apos;/&apos;</inlineHelpText>
        <label>FriendlyUrl</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to set the page as the home page for the site this page is in.</description>
        <inlineHelpText>Check this box to set the page as the home page for the site this page is in.</inlineHelpText>
        <label>Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSecurePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secure Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageTemplateVFPage__c</fullName>
        <formula>PageTemplate__r.VisualForce_Page_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PageTemplateVFPage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PageTemplate</label>
        <referenceTo>PageTemplate__c</referenceTo>
        <relationshipLabel>Pages</relationshipLabel>
        <relationshipName>Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_URL__c</fullName>
        <formula>&quot;http://hpvertica.force.com/hpdevice/&quot; &amp;   FriendlyUrl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Home_Page__c</columns>
        <columns>PageTemplate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Cache_expires__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FriendlyUrlsFormat</fullName>
        <active>true</active>
        <description>Friendly urls can not start with /</description>
        <errorConditionFormula>IF( LEFT( FriendlyUrl__c , 1) == &apos;/&apos; , true, false)</errorConditionFormula>
        <errorDisplayField>FriendlyUrl__c</errorDisplayField>
        <errorMessage>Do not start a friendly url with a &apos;/&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Page_Folder_can_not_be_empty</fullName>
        <active>true</active>
        <description>Require parent Folder reference on a page.</description>
        <errorConditionFormula>ISBLANK(Folder__c)</errorConditionFormula>
        <errorDisplayField>Folder__c</errorDisplayField>
        <errorMessage>A page needs to have a parent Folder.</errorMessage>
    </validationRules>
</CustomObject>